[package]
name = "iron-login"
version = "0.3.1"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>"]
license = "MIT"
keywords = ["iron", "sessions", "cookies"]
readme = "README.md"

description = "Basic session management in Iron."
repository = "https://github.com/untitaker/iron-login"
homepage = "https://github.com/untitaker/iron-login"

[dependencies]
iron = "0.2"
oven = "=0.2.16"
persistent = "0.0"
clippy = {git = "https://github.com/Manishearth/rust-clippy", version = "*", optional = true}

[dependencies.cookie]
version = "0.2"
features = ["secure"]
